Fix sliders on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -785,6 +785,8 @@ div.slider {
     display: inline-block;
     vertical-align: middle;
     position: absolute;
+
+    touch-action: none;
 }
 
 .linked-sliders {
